fix h3 margin. gallery gaps

--- a/css/styles.css
+++ b/css/styles.css
@@ -140,7 +140,6 @@ body {
 .header-contacts {
   display: flex;
   align-items: center;
-  /* gap: 40px; */
 }
 
 .header-contacts :not(:last-child) {
@@ -216,13 +215,10 @@ body {
 
 .features-list {
   display: flex;
-  align-items: center;
+  gap: 24px;
 }
 .features-list > li {
-  max-width: 264px;
-}
-.features-list :not(:last-child) {
-  margin-right: 24px;
+  width: calc((100% - 72px) / 4);
 }
 
 .list-title {
@@ -370,15 +366,14 @@ body {
 .filter-list {
   display: flex;
   flex-wrap: wrap;
-  align-items: center;
-  margin-top: -48px;
-  margin-left: -24px;
+  row-gap: 48px;
+  column-gap: 24px;
 }
 
 .filter-list > li {
-  flex-basis: calc(100% / 3 - 24px);
-  margin-top: 48px;
-  margin-left: 24px;
+  width: calc((100% - 48px) / 3);
+  /* margin-top: 48px;
+  margin-left: 24px; */
 }
 
 .filter-link {
